--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,7 @@ orbs:
 jobs:
   build-and-test:
     docker:
-      # Specify the desired Python version
-      - image: cimg/python:3.10  # Adjust the Python version as needed
+      - image: cimg/python:3.10
 
     steps:
       - checkout
@@ -16,22 +15,19 @@ jobs:
 
       # Adjust the path and name of the dependency file if needed
       - run:
-    name: Install dependencies
-    command: pip install -r backend/requirements.txt
-
+          name: Install dependencies
+          command: pip install -r backend/requirements.txt
 
       # Run your tests using the appropriate command
       - run:
-    name: Run test cases
-    command: |
-      pytest saveOutfitTest.py
-      pytest removeBgTest.py
-      pytest canvasImageTest.py
-
+          name: Run test cases
+          command: |
+            pytest saveOutfitTest.py
+            pytest removeBgTest.py
+            pytest canvasImageTest.py
 
 workflows:
   version: 2
   build_and_test:
     jobs:
-      - build-and-test  # Corrected the job name to match the defined job
-
+      - build-and-test
