--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,9 @@ jobs:
       # Navigate to the directory containing requirements.txt
       - run:
           name: Change to directory containing requirements.txt
-          command: cd C:\\Users\\riyad\\OneDrive\\Desktop\\wardrobewizard\\Wardrobe-Wizard\\backend
+          # Update the path to use forward slashes and remove the drive letter
+command: cd /Users/riyad/OneDrive/Desktop/wardrobewizard/Wardrobe-Wizard/backend
+
 
       # Install dependencies using requirements.txt
       - run:
