--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,31 +10,31 @@ jobs:
 
     steps:
       - checkout
-
-      # Navigate to the directory containing requirements.txt
-      - run:
-          name: Change to directory containing requirements.txt
-          # Update the path to use forward slashes and remove the drive letter
-command: cd /Users/riyad/OneDrive/Desktop/wardrobewizard/Wardrobe-Wizard/backend
-
-
-      # Install dependencies using requirements.txt
-      - run:
-          name: Install dependencies
-          command: pip install -r requirements.txt
+      - python/install-packages:
+          pkg-manager: pip
 
       # Save cache
       - save_cache:
-          key: v1-dependencies-{{ .Branch }}-{{ checksum "requirements.txt" }}
+          key: v1-dependencies-{{ .Branch }}-{{ checksum "C:\\Users\\riyad\\OneDrive\\Desktop\\wardrobewizard\\Wardrobe-Wizard\\backend\\requirements.txt" }}
           paths:
-            - requirements.txt
+            - C:\\Users\\riyad\\OneDrive\\Desktop\\wardrobewizard\\Wardrobe-Wizard\\backend\\requirements.txt
 
       # Restore cache
       - restore_cache:
           keys:
             - v1-dependencies-{{ .Branch }}
 
-      # Run your tests using the appropriate command
+      # Change to directory containing requirements.txt
+      - run:
+          name: Change to directory containing requirements.txt
+          command: cd C:\\Users\\riyad\\OneDrive\\Desktop\\wardrobewizard\\Wardrobe-Wizard\\backend
+
+      # Install dependencies
+      - run:
+          name: Install dependencies
+          command: pip install -r requirements.txt
+
+      # Run test cases
       - run:
           name: Run test cases
           command: |
