--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,15 +24,11 @@ jobs:
           keys:
             - v1-dependencies-{{ .Branch }}
 
-      # Change to directory containing requirements.txt
-      - run:
-          name: Change to directory containing requirements.txt
-          command: cd C:\\Users\\riyad\\OneDrive\\Desktop\\wardrobewizard\\Wardrobe-Wizard\\backend
-
       # Install dependencies
       - run:
           name: Install dependencies
           command: pip install -r requirements.txt
+          working_directory: C:\\Users\\riyad\\OneDrive\\Desktop\\wardrobewizard\\Wardrobe-Wizard\\backend
 
       # Run test cases
       - run:
