--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,11 @@
 #nginx.conf is runnning the front end code
 
 server {
-  listen 80;
-  server_name frontend;
+  listen 443;
+  ssl on;
+  ssl_certificate_key /etc/ssl/privatekey.pem;
+  ssl_certificate /etc/ssl/certificate.pem;
+  server_name virtualcloset.wardrobewizardcm.com;
   location / {
     # This would be the directory where your React app's static files are stored at
     root /usr/share/nginx/html;
