--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
       - /opt/AppFolder/frontend/:/usr/share/nginx/html/
       - /opt/AppFolder/nginx.conf:/etc/nginx/conf.d/default.conf
+      - /opt/AppFolder/ssl/certificate.pem:/etc/ssl/certificate.pem
+      - /opt/AppFolder/ssl/privatekey.pem:/etc/ssl/privatekey.pem
     depends_on:
       - backend
     environment:
