--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,12 @@ services:
   frontend:
     image: nginx:latest
     ports:
-      - "80:80"
+      - "443:443"
     volumes:
       - /opt/AppFolder/frontend/:/usr/share/nginx/html/
       - /opt/AppFolder/nginx.conf:/etc/nginx/conf.d/default.conf
-      - /opt/AppFolder/ssl/certificate.pem:/etc/ssl/certificate.pem
-      - /opt/AppFolder/ssl/privatekey.pem:/etc/ssl/privatekey.pem
+      - /opt/AppFolder/ssl/certificate.pem:/etc/nginx/certs/certificate.pem
+      - /opt/AppFolder/ssl/privatekey.pem:/etc/nginx/certs/privatekey.pem
     depends_on:
       - backend
     environment:
