--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,21 @@
 #nginx.conf is runnning the front end code
 
 server {
-  listen 443;
-  ssl on;
-  ssl_certificate_key /etc/ssl/privatekey.pem;
-  ssl_certificate /etc/ssl/certificate.pem;
+  listen 443 ssl;
+  ssl_certificate_key /etc/nginx/certs/privatekey.pem;
+  ssl_certificate /etc/nginx/certs/certificate.pem;
   server_name virtualcloset.wardrobewizardcm.com;
   location / {
     # This would be the directory where your React app's static files are stored at
     root /usr/share/nginx/html;
     try_files $uri /index.html;
   }
+  location /remove-bg {
+    proxy_pass http://localhost:5000;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
 }
+
