--- a/nginx.conf
+++ b/nginx.conf
@@ -10,8 +10,8 @@ server {
     root /usr/share/nginx/html;
     try_files $uri /index.html;
   }
-  location /remove-bg {
-    proxy_pass http://localhost:5000;
+  location /api {
+    proxy_pass http://backend:5000;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
